project(light_coroutine)
cmake_minimum_required(VERSION 2.6)

aux_source_directory(. SRC_LIST)
install(FILES light_coroutine.h DESTINATION include)

set(LIBRARY_NAME ${PROJECT_NAME})

set(SHARED_LIBRARY_NAME "${LIBRARY_NAME}_shared")
add_library(${SHARED_LIBRARY_NAME} SHARED ${SRC_LIST})
SET_TARGET_PROPERTIES(${SHARED_LIBRARY_NAME} PROPERTIES OUTPUT_NAME ${LIBRARY_NAME})
install(TARGETS ${SHARED_LIBRARY_NAME} LIBRARY DESTINATION lib)

set(STATIC_LIBRARY_NAME "${LIBRARY_NAME}_static")
add_library(${STATIC_LIBRARY_NAME} STATIC ${SRC_LIST})
SET_TARGET_PROPERTIES(${STATIC_LIBRARY_NAME} PROPERTIES OUTPUT_NAME ${LIBRARY_NAME})
install(TARGETS ${STATIC_LIBRARY_NAME} ARCHIVE DESTINATION lib)
